# cloudpanel-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  SETUP.md  package-lock.json  package.json
python/: README.md  pyproject.toml
python/src/cloudpanel_mcp/: cli.py
python/src/cloudpanel_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: cli.ts  index.ts  ssh.ts
