[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudpanel-mcp"
version = "2.1.0"
description = "Python wrapper for CloudPanel MCP server — manage sites, databases, SSL, Docker, and deploy apps via AI"
authors = [{ name = "heyjishh" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/heyjishh/cloudpanel-mcp#readme"
Repository = "https://github.com/heyjishh/cloudpanel-mcp.git"
Issues = "https://github.com/heyjishh/cloudpanel-mcp/issues"

[project.scripts]
cloudpanel-mcp = "cloudpanel_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
